k8s/base/mesh/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gear-gateway
  namespace: redhat-gear
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
