k8s/base/mesh/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: redhat-gear
  namespace: istio-system
spec:
  to:
    kind: Service
    name: istio-ingressgateway
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
